--- a/react/day_09/redux-toolkit-thunk-ex/package.json
+++ b/react/day_09/redux-toolkit-thunk-ex/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "redux-ex",
+  "name": "redux-toolkit-thunk-ex",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
-    "bootstrap": "^5.2.2",
+    "json-server": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject", 
+    "server" : "json-server --watch db.json --port 3001"
   },
   "eslintConfig": {
     "extends": [
